--- a/JwtLoginSystem_api/appsettings.json
+++ b/JwtLoginSystem_api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "SecretKey": "LongerThan-16Char-SecretKey",
+    "Encryptkey": "16CharEncryptKey",
+    "Issuer": "Ali",
+    "Audience": "MyWebsite",
+    "NotBeforeMinutes": "0",
+    "ExpirationMinutes": "60"
+  },
   "AllowedHosts": "*"
 }
