--- a/WebFramework/WebFramework.csproj
+++ b/WebFramework/WebFramework.csproj
@@ -13,13 +13,13 @@
 		<PackageReference Include="NLog" Version="5.2.4" />
 		<PackageReference Include="NLog.Targets.Sentry" Version="1.3.0" />
 		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.4" />
+		<PackageReference Include="Simple.OData.Client" Version="6.0.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen.ConventionalRouting" Version="4.3.0" />
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <ProjectReference Include="..\Data\Data.csproj" />
 	  <ProjectReference Include="..\Services\Services.csproj" />
 	</ItemGroup>
 
