Refactored token generators and account service

--- a/JwtLoginSystem_api/appsettings.json
+++ b/JwtLoginSystem_api/appsettings.json
@@ -11,7 +11,8 @@
     "Issuer": "Ali",
     "Audience": "MyWebsite",
     "NotBeforeMinutes": "0",
-    "ExpirationMinutes": "60"
+    "ExpirationMinutes": "60",
+    "RefreshTokenExpirationDays" :  "30"
   },
   "AllowedHosts": "*"
 }
