--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
 		<PackageReference Include="Pluralize.NET" Version="1.0.2" />
 	</ItemGroup>
   <ItemGroup>
